--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.12",
-    "@sentry/nextjs": "^8",
+    "@sentry/nextjs": "^8.2.1",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.25.0",
+    "@trpc/client": "next",
+    "@trpc/react-query": "next",
+    "@trpc/server": "next",
     "@uploadthing/react": "^6.5.4",
     "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.29.4",
+    "geist": "^1.3.0",
     "next": "^14.2.1",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
+    "superjson": "^2.2.1",
     "uploadthing": "^6.10.4",
     "zod": "^3.23.3"
   },
@@ -33,7 +39,7 @@
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "drizzle-kit": "^0.21.2",
+    "drizzle-kit": "^0.21.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "eslint-plugin-drizzle": "^0.2.3",
@@ -47,5 +53,5 @@
   "ct3aMetadata": {
     "initVersion": "7.32.0"
   },
-  "packageManager": "pnpm@9.0.6"
+  "packageManager": "pnpm@9.1.1"
 }
