--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.12",
+    "@radix-ui/react-slot": "^1.0.2",
     "@sentry/nextjs": "^8.2.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.25.0",
@@ -21,6 +22,8 @@
     "@trpc/server": "next",
     "@uploadthing/react": "^6.5.4",
     "@vercel/postgres": "^0.8.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.29.4",
     "geist": "^1.3.0",
     "next": "^14.2.1",
@@ -29,6 +32,7 @@
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.3.0",
     "uploadthing": "^6.10.4",
     "zod": "^3.23.3"
   },
