--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "@uploadthing/react": "^6.5.4",
+    "@upstash/ratelimit": "^1.1.3",
+    "@upstash/redis": "^1.31.1",
     "@vercel/postgres": "^0.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
